# JRbIA

./: .clasp.example.json  .gitignore  CLASP_GITHUB_HANDOFF.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: jrbia-drive-package.yml
apps-script/: 00_Code.gs  01_Config.gs  03_Menu_UI.gs  04_Sidebar.html  14_SourceBackup.gs  15_GitHubSync.gs  _backup_manifest.json  _file_index.csv  appsscript.json
apps/api-fastapi/: .env.example  pyproject.toml
apps/api-fastapi/app/: api.py  auth.py  config.py  firestore.py  main.py  platform.py  signature_studio.py  supabase.py
apps/api-fastapi/app/modules/signature_studio/: README.md
apps/api-fastapi/tests/: test_dep23.py
apps/web-react/: .env.example  index.html  package.json  tsconfig.json
apps/web-react/src/: App.tsx  (+7 more)
docs/QA/: DEP-25-RLS-STORAGE-EVIDENCE.md
drive-package-parts/: 16_JRbIASheetRationalization.gs.part00  16_JRbIASheetRationalization.gs.part01  16_JRbIASheetRationalization.gs.part02  16_JRbIASheetRationalization.gs.part03  16_JRbIASheetRationalization.gs.part04  17_JRbIADataQuality.gs.part00  17_JRbIADataQuality.gs.part01  18_JRbIAAutopilot.gs.part00  18_JRbIAAutopilot.gs.part01  19_JRbIACockpitRefresh.gs.part00  19_JRbIACockpitRefresh.gs.part01
drive-package/JRbIA_Cockpit_Install_v0.4R2_LIVE_1b7d2a35/: 01_Config.gs  03_Menu_UI.gs  14_SourceBackup.gs  README_FIRST.txt  appsscript.json
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 20260723000100_jrbia_platform_core.sql  20260723155545_jrbia_platform_core.sql  20260723155629_jrbia_storage.sql  (+2 more)
(+14 files in other folders)
